@@ -1,4 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>2</version>
+  <version>3</version>
+  <dependencies>
+    <dependency>profile-plone.app.widgets:default</dependency>
+  </dependencies>
 </metadata>
